# 200HZcamera

./: .gitignore  200HZcamera.ioc  CMakeLists.txt  Makefile
.github/: copilot-instructions.md
Core/Inc/: main.h
Core/Src/: main.c
